# ChangeLog for dev-ruby/sqlite3-ruby
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sqlite3-ruby/ChangeLog,v 1.31 2009/04/27 15:40:47 betelgeuse Exp $

  27 Apr 2009; Petteri Räty <betelgeuse@gentoo.org> sqlite3-ruby-1.2.4:
  EAPI 1 to turn on swig by default.

  22 Feb 2009; Hans de Graaff <graaff@gentoo.org>
  -sqlite3-ruby-1.1.0.ebuild, -sqlite3-ruby-1.2.1.ebuild,
  sqlite3-ruby-1.2.4.ebuild:
  Change wording now that the ruby USE flag on swig is no longer used.
  Remove old versions.

  20 Feb 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  sqlite3-ruby-1.2.1.ebuild, sqlite3-ruby-1.2.4.ebuild:
  Remove checks for swig USE flags since the last version does not have them
  and they were unneeded before, too. Closes bug #249565.

  05 Dec 2008; Raúl Porcel <armin76@gentoo.org> sqlite3-ruby-1.2.4.ebuild:
  ia64 stable wrt #245574

  01 Dec 2008; Brent Baude <ranger@gentoo.org> sqlite3-ruby-1.2.4.ebuild:
  stable ppc64, bug 245574

  30 Nov 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  sqlite3-ruby-1.2.4.ebuild:
  ppc stable, bug #245574

  30 Nov 2008; Markus Meier <maekke@gentoo.org> sqlite3-ruby-1.2.4.ebuild:
  amd64/x86 stable, bug #245574

  04 Nov 2008; Ferris McCormick <fmccor@gentoo.org>
  sqlite3-ruby-1.2.4.ebuild:
  Sparc stable, Bug #245574.

*sqlite3-ruby-1.2.4 (23 Sep 2008)

  23 Sep 2008; Hans de Graaff <graaff@gentoo.org>
  +sqlite3-ruby-1.2.4.ebuild:
  Version bump, moved from ruby overlay. Thanks for Alex Legler for preparing
  and testing it.

  06 Aug 2008; Hans de Graaff <graaff@gentoo.org> metadata.xml:
  Add USE flag description to metadata wrt GLEP 56.

  12 May 2008; Markus Rothe <corsair@gentoo.org> sqlite3-ruby-1.2.1.ebuild:
  Stable on ppc64; bug #221309

  12 May 2008; Hans de Graaff <graaff@gentoo.org> sqlite3-ruby-1.2.1.ebuild:
  swig is not a runtime dependency; fixes #221479

  24 May 2007; Diego Pettenò <flameeyes@gentoo.org>
  sqlite3-ruby-1.2.1.ebuild: