@@ -1,4 +1,6 @@
 DIST sqlite3-ruby-1.2.4.tar.bz2 80907 RMD160 5757d7ce79cb39a21c62daa19e8725a037bbd4c1 SHA1 1ff66fc2fc3e40af9e21f81377eb343fe19619b1 SHA256 4781bb0d4d0ef6d1078dfda2832af30332e2f28a316c17eb854bb7ff5ea6b0d6
+DIST sqlite3-ruby-1.2.5.gem 74240 RMD160 509b0401ee40e2176431ef30595f14a9ef4e2bcd SHA1 837eabb8c80f37e46e29d4c7c22ee08e7679e47a SHA256 b94611a60e1f336b68291010f66e112e5c18c0808d3f45c16d779d3619e51d3b
 EBUILD sqlite3-ruby-1.2.4.ebuild 1292 RMD160 40f70e76d69c469158275fd6f1dde119c7af42f5 SHA1 da40220db66fd34412c6b8ad756d91d844937e28 SHA256 5df56153ec40c7c00a68c683978652162ab02389c8b66767023ce02f46b65496
-MISC ChangeLog 4215 RMD160 434bd3bca9ec91567b5bc74e614ff3b0add83b8e SHA1 2d5bb9360f623615032116f35b92689cc932cd6c SHA256 4a530f7b23c7043741393091984cfb40992bedcd09d69dcb2ddc4adb1fa15e0c
+EBUILD sqlite3-ruby-1.2.5.ebuild 1567 RMD160 3820fa84526690d110078d4e0946156fea0ef687 SHA1 686bcc4197cc9697b939866565ec69f916f2f0d4 SHA256 3481193d59ebbfaf0853ee52af4b7ae2c844fe1cc71498a78437d02d5c5345e5
+MISC ChangeLog 4548 RMD160 32653726812c4b2dce37191cc912a6a1e3adf5fc SHA1 7bca3425d8aa3b5d6294a88f03124f67ef48c37c SHA256 ecd101d167cd947ebffb260ce30cc8d24d82f26c1445659e20d3a62f647f777e
 MISC metadata.xml 255 RMD160 5728a5d67f1b20016a81c8594151e41bc5442a74 SHA1 2616b37bf1924a7ea724e1e12dc7096e602445c5 SHA256 2316a3c7f17bf8dd9d41dfd645f14b1d0d61778aa91e45639eaec81f551cb68a
